[tool.poetry]
name = "bilibili-spider"
version = "0.1.0"
description = ""
authors = ["mobyw"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
requests = "^2.28.2"
loguru = "^0.6.0"
aiohttp = "^3.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^23.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
